--- a/public/index.html
+++ b/public/index.html
@@ -15,37 +15,143 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
 
     <!-- =============BOXICONS============= -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
     <!-- =============UNICONS============= -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
+    />
 
     <title>Lenard | Web Developer</title>
+    <style>
+      /* .loading{
+    -webkit-animation: sk-scaleout 1s infinite ease-in-out;
+    animation: sk-scaleout 1s infinite ease-in-out;
+    background-color: black;
+    border-radius: 100%;
+    height: 6em;
+    width: 6em;
+  }
+
+  .containerloader {
+    align-items: center;
+    background-color: white;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    width: 100vw;
+  }
+
+  @keyframes sk-scaleout {
+    0% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    }
+    100% {
+      -webkit-transform: scale(1);
+      opacity: 0.5;
+      transform: scale(1);
+    }
+  } */
+
+    .containerloader {
+    align-items: center;
+    background-color: white;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    width: 100vw;
+  }
+      .newtons-cradle {
+        --uib-size: 100px;
+        --uib-speed: 1.2s;
+        --uib-color: #474554;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: var(--uib-size);
+        height: var(--uib-size);
+      }
+
+      .newtons-cradle__dot {
+        position: relative;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        width: 25%;
+        transform-origin: center top;
+      }
+
+      .newtons-cradle__dot::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 25%;
+        border-radius: 50%;
+        background-color: var(--uib-color);
+      }
+
+      .newtons-cradle__dot:first-child {
+        animation: swing var(--uib-speed) linear infinite;
+      }
+
+      .newtons-cradle__dot:last-child {
+        animation: swing2 var(--uib-speed) linear infinite;
+      }
+
+      @keyframes swing {
+        0% {
+          transform: rotate(0deg);
+          animation-timing-function: ease-out;
+        }
+
+        25% {
+          transform: rotate(70deg);
+          animation-timing-function: ease-in;
+        }
+
+        50% {
+          transform: rotate(0deg);
+          animation-timing-function: linear;
+        }
+      }
+
+      @keyframes swing2 {
+        0% {
+          transform: rotate(0deg);
+          animation-timing-function: linear;
+        }
+
+        50% {
+          transform: rotate(0deg);
+          animation-timing-function: ease-out;
+        }
+
+        75% {
+          transform: rotate(-70deg);
+          animation-timing-function: ease-in;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root">
+      <div id="spinner" class="containerloader">
+        <div class="newtons-cradle">
+          <div class="newtons-cradle__dot"></div>
+          <div class="newtons-cradle__dot"></div>
+          <div class="newtons-cradle__dot"></div>
+          <div class="newtons-cradle__dot"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
