finish no animation in contact

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     }
   } */
 
-    .containerloader {
+    /* .containerloader {
     align-items: center;
     background-color: white;
     display: flex;
@@ -138,20 +138,20 @@
           transform: rotate(-70deg);
           animation-timing-function: ease-in;
         }
-      }
+      } */
     </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <div id="spinner" class="containerloader">
+      <!-- <div id="spinner" class="containerloader">
         <div class="newtons-cradle">
           <div class="newtons-cradle__dot"></div>
           <div class="newtons-cradle__dot"></div>
           <div class="newtons-cradle__dot"></div>
           <div class="newtons-cradle__dot"></div>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
