--- a/public/index.html
+++ b/public/index.html
@@ -29,129 +29,19 @@
     />
 
     <title>Lenard | Web Developer</title>
-    <style>
-      /* .loading{
-    -webkit-animation: sk-scaleout 1s infinite ease-in-out;
-    animation: sk-scaleout 1s infinite ease-in-out;
-    background-color: black;
-    border-radius: 100%;
-    height: 6em;
-    width: 6em;
-  }
 
-  .containerloader {
-    align-items: center;
-    background-color: white;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    width: 100vw;
-  }
-
-  @keyframes sk-scaleout {
-    0% {
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    }
-    100% {
-      -webkit-transform: scale(1);
-      opacity: 0.5;
-      transform: scale(1);
-    }
-  } */
-
-    /* .containerloader {
-    align-items: center;
-    background-color: white;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    width: 100vw;
-  }
-      .newtons-cradle {
-        --uib-size: 100px;
-        --uib-speed: 1.2s;
-        --uib-color: #474554;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: var(--uib-size);
-        height: var(--uib-size);
-      }
-
-      .newtons-cradle__dot {
-        position: relative;
-        display: flex;
-        align-items: center;
-        height: 100%;
-        width: 25%;
-        transform-origin: center top;
-      }
-
-      .newtons-cradle__dot::after {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 25%;
-        border-radius: 50%;
-        background-color: var(--uib-color);
-      }
-
-      .newtons-cradle__dot:first-child {
-        animation: swing var(--uib-speed) linear infinite;
-      }
-
-      .newtons-cradle__dot:last-child {
-        animation: swing2 var(--uib-speed) linear infinite;
-      }
-
-      @keyframes swing {
-        0% {
-          transform: rotate(0deg);
-          animation-timing-function: ease-out;
-        }
-
-        25% {
-          transform: rotate(70deg);
-          animation-timing-function: ease-in;
-        }
-
-        50% {
-          transform: rotate(0deg);
-          animation-timing-function: linear;
-        }
-      }
-
-      @keyframes swing2 {
-        0% {
-          transform: rotate(0deg);
-          animation-timing-function: linear;
-        }
-
-        50% {
-          transform: rotate(0deg);
-          animation-timing-function: ease-out;
-        }
-
-        75% {
-          transform: rotate(-70deg);
-          animation-timing-function: ease-in;
-        }
-      } */
-    </style>
+    <meta name="title" content="Lenard Roy Arellano Web Developer" />
+    <meta name="description" content="This is my personal website" />
+    <meta
+      name="keywords"
+      content="lenard roy arellano, lenard, web developer, developer portfolio"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="revisit-after" content=" days" />
+    <meta name="author" content="Lenard Roy Arellano" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <!-- <div id="spinner" class="containerloader">
-        <div class="newtons-cradle">
-          <div class="newtons-cradle__dot"></div>
-          <div class="newtons-cradle__dot"></div>
-          <div class="newtons-cradle__dot"></div>
-          <div class="newtons-cradle__dot"></div>
-        </div>
-      </div> -->
-    </div>
+    <div id="root"></div>
   </body>
 </html>
