add google for search

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
 
-    <title>Lenard | Web Developer</title>
+    <title>Lenard Roy | Web Developer</title>
+
+    <meta name="google-site-verification" content="xR31Ry4Xhy_rP06cDF26E9I1bnFKoPqH3utZzC9VFbQ" />
 
     <meta name="title" content="Lenard Roy Arellano Web Developer" />
     <meta name="description" content="This is my personal website" />
