--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,15 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    
 
     <!-- =============UNICONS============= -->
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
-
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/solid.css">
+    
     <title>Lenard Roy | Web Developer</title>
 
     <meta name="google-site-verification" content="xR31Ry4Xhy_rP06cDF26E9I1bnFKoPqH3utZzC9VFbQ" />
